fixing the video on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ a {
   color: #1dc8cd;
   transition: 0.5s;
 }
+li{
+  list-style: none;
+}
 
 a:hover, a:active, a:focus {
   color: #1dc9ce;
@@ -65,9 +68,13 @@ h1, h2, h3, h4, h5, h6 {
 # Splash Screen
 --------------------------------------------------------------*/
 #splashScreen img{
-	margin:0 auto;
+  margin:0 auto;
+  
 }
-
+.splash{
+  height: 100%;
+  overflow: hidden;
+}
 #splashScreen{
 	position:absolute;
 	top:0;
@@ -75,7 +82,7 @@ h1, h2, h3, h4, h5, h6 {
 	height:100%;
 	width:100%;
 	background-color:#FFFFFF;
-	background-repeat:no-repeat;
+  background-repeat:no-repeat;
 	text-align:center;
 }
 #page{
@@ -90,10 +97,8 @@ h1, h2, h3, h4, h5, h6 {
 	background-repeat: no-repeat;
 	text-align:center;
 }
-@media screen and (max-width: 700px){
-  #promoIMG{
+@media screen and (max-width: 409px){
     
-  }
 }
 #promoIMG img{
 	margin-top:80px;
@@ -155,8 +160,8 @@ h1, h2, h3, h4, h5, h6 {
 
 #header #logo img {
   max-width:200px; 
-  margin-top: -135px;
-  margin-left: -120px
+  margin-top: -90px;
+  margin-left: -80px
 }
 
 @media (max-width: 768px) {
@@ -166,7 +171,7 @@ h1, h2, h3, h4, h5, h6 {
   }
   #header #logo img {
     max-height: 70px;
-    margin-top: -135px;
+    margin-top: -100px;
   }
   #team .member .pic img{
     margin-bottom: 15px;
@@ -176,10 +181,17 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 573px){
   #header #logo img {
     max-height: 70px;
-    margin-top: -135px;
+    margin-top: -105px;
     margin-left: -50px;
   }
 }
+}
+@media (min-width: 320px) and (max-width: 480px) {
+  #header #logo img {
+    max-height: 70px;
+    margin-top: -105px;
+    margin-left: -80px;
+  }
 }
 
 /* #header.header-fixed {
@@ -400,116 +412,168 @@ h1, h2, h3, h4, h5, h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 
-.ham{
-  z-index: 2;
+/*styling open close button*/
+.button {
+	display:inline;
+	position:absolute;
+	right:50%;
+	top:6px;
+	z-index:999;
+	font-size:30px;
 }
-label .menu {
-  position: absolute;
-  right: -100px;
-  left: -100px;
-  margin-left: auto;
-  margin-right: auto;
-  top: -100px;
-  z-index: 100;
-  width: 200px;
-  height: 200px;
-  border-radius: 50% 50% 50% 50%;
-  -webkit-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  box-shadow: 0 0 0 0 #FFF, 0 0 0 0 #FFF;
-  cursor: pointer;
+.button a {
+	text-decoration:none;
 }
-
-label .hamburger {
-  position: absolute;
-  top: 135px;
-  left: 85px;
-  width: 30px;
-  height: 2px;
-  background: #000;
-  display: block;
-  -webkit-transform-origin: center;
-  transform-origin: center;
-  -webkit-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
+.btn-open:after {
+	color:#333;
+	content:"\f0c9";
+	font-family:"FontAwesome";
+	transition-property:all .2s linear 0s;
+	-moz-transition:all .2s linear 0s;
+	-webkit-transition:all .2s linear 0s;
+	-o-transition:all .2s linear 0s;
 }
-
-label .hamburger:after, label .hamburger:before {
-  -webkit-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  background: #000;
+.btn-open:hover:after {
+	color:red;
 }
-
-label .hamburger:before { top: -10px; }
-
-label .hamburger:after { bottom: -10px; }
-
-label input { display: none; }
-
-label input:checked + .menu {
-  box-shadow: 0 0 0 100vw #000000, 0 0 0 100vh #000000;
-  border-radius: 0;
+.btn-close:after {
+	color:#fff;
+	content:"\f00d";
+	font-family:"FontAwesome";
+	transition-property:all .2s linear 0s;
+	-moz-transition:all .2s linear 0s;
+	-webkit-transition:all .2s linear 0s;
+	-o-transition:all .2s linear 0s;
 }
-
-label input:checked + .clck {
-  box-shadow: 0 0 0 100vw #000000, 0 0 0 100vh #000000;
-  border-radius: 0;
+.btn-close:hover:after {
+	color: red;
 }
-
-label input:checked + .menu .hamburger {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
+/*overlay*/
+.overlay {
+	display:none;
+	position:fixed;
+	top:0;
+	height:100%;
+	width:100%;
+	background:#333;
+	overflow:auto;
+	z-index:99;
 }
-
-label input:checked + .menu .hamburger:after {
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
-  bottom: 0;
+.wrap {
+	color:#e9e9e9;
+	text-align:center;
+	max-width:90%;
+	margin:0 auto;
 }
-
-label input:checked + .menu .hamburger:before {
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
-  top: 0;
+.wrap ul.wrap-nav {
+	border-bottom:1px solid #575757;
+	text-transform:capitalize;
+	padding:150px 0px 100px;
 }
-label input:checked + .menu + ul { opacity: 1; }
-
-label ul {
-  padding-top: 50%;
-  z-index: 200;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  -webkit-transition: .25s 0s ease-in-out;
-  transition: .25s 0s ease-in-out;
-  list-style: none;
+.wrap ul.wrap-nav li {
+	font-size:20px;
+	display:inline-block;
+	vertical-align:top;
+	width:24%;
+	position:relative;
 }
-
-label a {
-  margin-bottom: 1em;
-  display: block;
-  color: #000;
-  text-decoration: none;
-  font-family: 'Courier New', Courier, monospace;
-  /* transition: .5s ease-in-out; */
-  border: 0;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-transition: .25s 0s ease-in-out;
-  transition: .25s 0s ease-in-out;
-  border-radius: 20px;
-  padding: 8px 30px;
-  color: #fff;
+.wrap ul.wrap-nav li a {
+	color:red;
+	display:block;
+	padding:8px 0;
+	text-decoration:none;
+	transition-property:all .2s linear 0s;
+	-moz-transition:all .2s linear 0s;
+	-webkit-transition:all .2s linear 0s;
+	-o-transition:all .2s linear 0s;
 }
-
+.wrap ul.wrap-nav li a:hover {
+	color:#f0f0f0;
+}
+.wrap ul.wrap-nav ul {
+	padding:20px 0;
+}
+.wrap ul.wrap-nav ul li {
+	display:block;
+	font-size:13px;
+	width:100%;
+	color:#e9e9e9;
+}
+.wrap ul.wrap-nav ul li a {
+	color:#f0f0f0;
+}
+.wrap ul.wrap-nav ul li a:hover {
+	color:red;
+}
+.social {
+	font-size:25px;
+	padding:20px;
+}
+.social p {
+	margin:0;
+	padding:20px 0 5px 0;
+	line-height:30px;
+	font-size:13px;
+}
+.social p a {
+	color:red;
+	text-decoration:none;
+	margin:0;
+	padding:0;
+}
+.social-icon {
+	width:80px;
+	height:50px;
+	background:#e9e9e9;
+	color:#333;
+	display:inline-block;
+	margin:0 20px;
+	transition-property:all .2s linear 0s;
+	-moz-transition:all .2s linear 0s;
+	-webkit-transition:all .2s linear 0s;
+	-o-transition:all .2s linear 0s;
+}
+.social-icon:hover {
+	background:red;
+	color:#f0f0f0;
+}
+.social-icon i {
+	margin-top:12px;
+}
+@media screen and (max-width:48em) {
+	.wrap ul.wrap-nav>li {
+		width:100%;
+		padding:20px 0;
+		border-bottom:1px solid #575757;
+	}
+	.wrap ul.wrap-nav {
+		padding:30px 0px 0px;
+	}
+	nav ul {
+		opacity:0;
+		visibility:hidden;
+	}
+	.social {
+		color:#c1c1c1;
+		font-size:25px;
+		padding:15px 0;
+	}
+	.social-icon {
+		width:100%;
+		height:50px;
+		background:#fff;
+		color:#333;
+		display:block;
+		margin:5px 0;
+	}
+}
+.content {
+	width:100%;
+	/* margin-top:200px; */
+	font-size:20px;
+	color:#333;
+	text-align: center;
+}
 
 /*--------------------------------------------------------------
 # Sections
@@ -526,12 +590,12 @@ label a {
 .section-header .section-description {
   text-align: center;
   padding-bottom: 40px;
-  color: #777;
+  color: #000000;
   font-size: 30px;
 }
-.vision{
+/* .vision{
   font-weight: bolder;
-}
+} */
 
 .section-header .section-divider {
   display: block;
@@ -545,7 +609,7 @@ label a {
 /* About Us Section
 --------------------------------*/
 #about {
-  padding: 60px 0;
+  padding: 20px 0;
   overflow: hidden; 
 }
 
@@ -604,6 +668,9 @@ label a {
 
 #about .content ul li {
   padding-bottom: 10px;
+}
+.level{
+  padding-top: 80px;
 }
 
 /* Product Featuress Section
